crates/core/tests/snapshots/contract_snapshots__AMBIGUOUS_TARGET.snap
---
source: crates/core/tests/contract_snapshots.rs
expression: rendered
---
AMBIGUOUS_TARGET: driver message
next: pick a ref with a firmer native_id, walk --json bounds, or coordinate-tap from --json, then retry
