crates/core/tests/snapshots/contract_snapshots__BAD_REQUEST.snap
---
source: crates/core/tests/contract_snapshots.rs
expression: rendered
---
BAD_REQUEST: driver message
next: fix the request; do not retry unchanged
