crates/core/tests/snapshots/contract_snapshots__DRIVER_ERROR.snap
---
source: crates/core/tests/contract_snapshots.rs
expression: rendered
---
DRIVER_ERROR: driver message
next: take a fresh snapshot to verify the current state before retrying; escalate if it recurs
