crates/core/tests/snapshots/contract_snapshots__STALE_REF.snap
---
source: crates/core/tests/contract_snapshots.rs
expression: rendered
---
STALE_REF: driver message
next: re-snapshot, then retry the action with a fresh ref
