crates/core/tests/snapshots/contract_snapshots__UNAUTHORIZED.snap
---
source: crates/core/tests/contract_snapshots.rs
expression: rendered
---
UNAUTHORIZED: driver message
next: fix AGENT_MOBILE_TOKEN; do not retry unchanged
