crates/core/tests/snapshots/contract_snapshots__UNKNOWN_COMMAND.snap
---
source: crates/core/tests/contract_snapshots.rs
expression: rendered
---
UNKNOWN_COMMAND: driver message
next: fix the client; do not retry
