crates/core/tests/snapshots/contract_snapshots__driver_error_render.snap
---
source: crates/core/tests/contract_snapshots.rs
expression: rendered
---
DRIVER_ERROR: the runner exploded
next: take a fresh snapshot to verify the current state before retrying; escalate if it recurs
