crates/core/tests/snapshots/contract_snapshots__screenshot_data.snap
---
source: crates/core/tests/contract_snapshots.rs
expression: screenshot
---
Screenshot {
    png_base64: "iVBORw0KGgoAAAANSUhEUg",
}
