crates/core/tests/snapshots/contract_snapshots__terminate_data.snap
---
source: crates/core/tests/contract_snapshots.rs
expression: terminate
---
Terminate {
    terminated: "com.example.todo",
}
